# datadiff

./: Cargo.toml  PLAN.md  README.md
src/: config.rs  lib.rs  main.rs
src/diff/: cell_diff.rs  mod.rs  row_diff.rs  schema_diff.rs
src/git/: driver.rs  mod.rs
src/model/: key.rs  mod.rs  schema.rs  table.rs
src/output/: html.rs  json.rs  mod.rs  terminal.rs  unified.rs
src/parser/: csv.rs  excel.rs  json.rs  mod.rs  parquet.rs
testdata/: employees_new.csv  employees_new.json  employees_new.parquet  employees_new.xlsx  employees_old.csv  employees_old.json  employees_old.parquet  employees_old.xlsx  new.csv  old.csv  products_new.xlsx  products_old.xlsx
