[package]
name = "datadiff"
version = "0.1.0"
edition = "2021"
description = "Semantic diff for tabular data (CSV, Excel, Parquet, JSON)"
license = "MIT"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Parsing
csv = "1.3"
calamine = "0.24"
parquet = { version = "53", features = ["arrow"] }
arrow = "53"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Data structures
indexmap = "2"
rustc-hash = "2"

# Output
termcolor = "1"
tabled = "0.16"
tera = "1"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Utilities
thiserror = "2"
anyhow = "1"
rayon = "1"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
